
Bug fixes:
[#595] OR query doesn't process QueryAnswer objects
[#595] Issues an error msg when any AND/OR clause is not LT or Operator 
[#609] Inference/Evolution Query causing Query Agent crash
[#618] atom::Link and atom::LinkSchema are crashing after decoding a handle to NULL
[#613] Query Agent is crashing after returning answers
[#648] 'abort' command in LinkCreationAgent
[#620] Miscellaneous changes in order to diminish probability of PORT conflict error 
[#629] Miscelaneous fixes, logging changes, minor features to help debuging, etc [PR: #719]
[FIX] Equivalence strength calculating with wrong value [PR: #716]
[Fix][AtomDBCache] Split document caching into nodes and links. [PR: #711]
[#629] Miscellaneous minor fixes and changes for parameter tuning [PR: #735]
[#632] Removing PROOF_OF_IMPLICATION_OR_EQUIVALENCE command [PR: #715]
[#727] Fix MongodbDocument::get_size() [PR: #734]
[FIX] Fixing evolution query [PR: #732]
[#632] [TOY PROBLEM] Change the way bias is added and fix word predicates [PR: #741]
[#632] Toy problem DB gen improvements [PR: #743]

General changes:
[#695] Creates a class AttentionBrokerClient which shaw be used as a hub to all AB requests [PR: #697]
[#662] Benchmark median tracking with alerts [PR: #673] 
[#692] Implements match() in all atom subclasses [PR: #693]
[#695] Add a new AttentionBroker API command: set_determiners() [PR: #706] 
[#632] Parameter to repeat Evolution Agent iterations [PR: #703] 
[#632] Added more parameters to tune Inference Agent [PR: #690] 
[#557] Add a make clean clause in our main Makefile [PR: #704] 
[#644] Use DBMS to gather benchmark test results [PR: #701]
[#632] Predicate more descritive names [PR: #731]
[Feature] Add RedisMongoDB::add_patterns() [PR: #737]
[RedisMongoDB] Add pattern_index_schema.priority logic [PR: #689]
[#691] Add Atom::is_toplevel and AtomDB::get_matching_atoms(is_toplevel, Atom) [PR: #702] 
[#632] Added cache to not process already processed Query Answers [PR: #733]


